--- a/MGS.css
+++ b/MGS.css
@@ -5,6 +5,7 @@ body{
     background-color: #6b7d99;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: azure;
+    border-radius: 7px;
 }
 .game img{
     margin-left: 800px;
