--- a/MGS.css
+++ b/MGS.css
@@ -6,6 +6,8 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: azure;
     border-radius: 7px;
+    border: 5px;
+    border-color: black;
 }
 .game img{
     margin-left: 1000px;
